# fastapi-scallfolding

./: .gitignore  AGENTS.md  LICENSE  README.md  cli.py  pyproject.toml
scallfold/: cli.py  compatibility.py
scallfold/project/: generator.py  initializer.py  structure.py  versions.py
scallfold/templates/clean/: .gitignore  README.md.j2  conftest.py.j2  test_basic.py.j2
scallfold/templates/structured/: .gitignore  main.py.j2  pyproject.toml.j2  requirements.txt.j2  test_basic.py.j2
scallfold/templates/structured/api/: routes.py.j2
scallfold/templates/structured/core/: config.py.j2  database.py.j2
scallfold/templates/structured/models/: user.py.j2
scallfold/utils/: prompts.py  setup.py  templating.py
templates/clean/: pyproject.toml.j2
templates/structured/: main.py.j2  pyproject.toml.j2  requirements.txt
templates/structured/core/: config.py.j2
templates/structured/models/: example.py.j2  user.py.j2
tests/: test_bugfixes.py  test_prompts.py  test_structure.py  test_templating.py
