[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-forge"
version = "0.1.0"
description = "A command-line tool to scaffold FastAPI projects, inspired by vitejs."
authors = [
    { name = "Juan Ignacio Jara Caceres Placeholder", email = "juanignaciojara505@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer[all]>=0.9.0",
    "InquirerPy>=0.3.4",
    "Jinja2>=3.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["scallfold"]

[project.scripts]
fast-forge = "cli:app"

[project.urls]
"Homepage" = "https://github.com/jara505/fastapi-scallfolding"
"Bug Tracker" = "https://github.com/jara505/fastapi-scallfolding/issues"
